+ [B][COLOR lime]1.7.1[/B][/COLOR] [COLOR gold](25-01-2019)[/COLOR]
- fix path issue on Downloads

+ [B][COLOR lime]1.7.0[/B][/COLOR] [COLOR gold](22-01-2019)[/COLOR]
- fix Tv Show Packs
- add Download Function(context menu)
- add Downloads on Main menu(downloads must be enabled in settings)

+ [B][COLOR lime]1.6.0[/B][/COLOR] [COLOR gold](14-01-2019)[/COLOR]
- fix search url
- add Set View-Type option(like exodus viewtypes)
- add Premiumize authorization on settings
- fix dom_parser and parseDOM function
- linked github addon url by clicking Github-Help on main menu


+ [B][COLOR lime]1.5.1[/B][/COLOR] [COLOR gold](03-01-2019)[/COLOR]
- fix search url

+ [B][COLOR lime]1.5.0[/B][/COLOR] [COLOR gold](21-12-2018)[/COLOR]
- rewrite View-Mode function
  (now you can use the context menu
   and set the viewtype you prefer by
   select Set View as Default)

+ [B][COLOR lime]1.4.0[/B][/COLOR] [COLOR gold](11-12-2018)[/COLOR]
- fix search link
- better search function
  store/remove search queries
- add View-Mode on settings to select view-type for menu and titles

+ [B][COLOR lime]1.3.0[/B] [COLOR gold](01-12-2018)[/COLOR]
- add cloudflare support
  (but no title's icon when website uses cloudflare-protection)
- add clear cache and settings on context menu for faster access!
- add check function for website state (with or without cloudflare)

+ [B][COLOR lime]1.2.0[/B] [COLOR gold](28-11-2018)[/COLOR]
- Fix Search Error
- Add Settings
  Enable/Disable View Size|'Dead' Links function
  (If this enabled, addon first checks
   if the links are alive and then
   shows them in a list with the file size)
- Code cosmetics

+ [B][COLOR lime]1.1.1[/B] [COLOR gold](26-11-2018)[/COLOR]
- Fix unicode errors(PLOT)
- Code cosmetics

+ [B][COLOR gold]1.1.0[/B] [COLOR gold](19-11-2018)[/COLOR]
- Add Cache function(Menus open faster-reduce website traffic)
- New artwork (icon/fanart)
- Add Version on main menu(ForceUpdate)
- Code cosmetics
