@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.releaseBB" version="1.7.1" name="Release[COLOR orange][B]BB[/B][/COLOR]" provider-name="Bugatsinho">
+<addon id="plugin.video.releaseBB" version="1.7.2" name="Release[COLOR orange][B]BB[/B][/COLOR]" provider-name="Bugatsinho">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
     <import addon="script.module.t0mm0.common" version="2.1.1"/>
@@ -18,8 +18,8 @@
     <website>https://bugatsinho.github.io/</website>
     <twitter>https://twitter.com/bugatsinho</twitter>
     <repo>https://bugatsinho.github.io/repo/</repo>
-    <news>+ [B][COLOR lime]1.7.1[/B][/COLOR] [COLOR gold](25-01-2019)[/COLOR]
-- fix path issue on Downloads</news>
+    <news>+ [B][COLOR lime]1.7.2[/B][/COLOR] [COLOR gold](26-01-2019)[/COLOR]
+- fix no year or episode title issue(like MMA and UFC titles)</news>
     <assets>
         <icon>icon.png</icon>
         <fanart>fanart.jpg</fanart>
